--- a/public/huds/arie-hud/template.pug
+++ b/public/huds/arie-hud/template.pug
@@ -214,3 +214,13 @@ html
           .text 100
           .bar
             .fill
+      #observed_ammo
+        img(src="/files/img/ammo.png")
+        .text 
+          span.chamber 
+          span.mag 
+      #eventslogo
+        #logo_left
+          img(src="/files/img/IEG_Logo.png")
+        #logo_bottom
+          img(src="/files/img/Logo_PKPI.png")
