--- a/public/huds/arie-hud/style.css
+++ b/public/huds/arie-hud/style.css
@@ -10,14 +10,14 @@
 		background-color: rgba(0, 0, 0, 0);
 	}
 	#defuser {
-  width:500px;
-  height:178px;
-  background-image:url("/files/img/elements/defusing.png");
-  position:absolute;
-  left:-274px;
-  margin-left:50%;
-  bottom:200px;
-}
+	  width:500px;
+	  height:178px;
+	  background-image:url("/files/img/elements/defusing.png");
+	  position:absolute;
+	  left:-274px;
+	  margin-left:50%;
+	  bottom:500px;
+	}
 #defuser_title{
   position:absolute;
   left:141px;
@@ -508,7 +508,7 @@
 	}
 
 	.team {
-		width: 1000px;
+		width: 750px;
 		height: 1300px;
 	}
 
@@ -518,7 +518,7 @@
 		bottom: 0;
 	}
 	.equip_bar>.bar_weapon{
-		width:410px !important;
+		width:263px !important;
 	}
 
 	#right {
@@ -529,25 +529,25 @@
 
 	.player {
 		background-color: rgba(0, 0, 0, 0.65);
-		width: 800px;
-		height: 150px;
+		width: 600px;
+		height: 112.5px;
 		margin-bottom: 4px;
 	}
 
 	.bar1 {
 		width: 100%;
-		height: 70px;
+		height: 52.5px;
 		font-size: 25px;
 		font-weight: bold;
 	}
 
 	.bottom_bar {
 		width: 100%;
-		height: 72px;
+		height: 40.5px;
 	}
 
 	#left>.player>.bar1>.hp_bar {
-		width: 800px;
+		width: 600px;
 		background: #5788a8;
 		height: 100%;
 		float: left;
@@ -556,7 +556,7 @@
 	}
 
 	#right>.player>.bar1>.hp_bar {
-		width: 800px;
+		width: 600px;
 		background: #c19511;
 		height: 100%;
 		float: right;
@@ -614,38 +614,38 @@
 	#left>.player>.bar1>.hp_bar>.hp_el,
 	#left>.player>.bottom_bar>.equip_bar>.hp_el {
 		float: left;
-		width: 100px;
+		width: 75px;
 		height: 100%;
 		text-align: center;
-		font-size:40px;
+		font-size:35px;
 	}
 
 	#right>.player>.bar1>.hp_bar>.hp_el,
 	#right>.player>.bottom_bar>.equip_bar>.hp_el {
 		float: right;
-		width: 100px;
+		width: 75px;
 		height: 100%;
 		text-align: center;
-		font-size:40px;
+		font-size:35px;
 	}
 
 	#left>.player>.bar1>.hp_bar>.bar_username {
 		float: left;
 		padding-left: 15px;
-		width: 384px;
+		width: 238px;
 		overflow: hidden;
 		white-space: nowrap;
-		font-size:40px;
+		font-size:35px;
 	}
 
 	#right>.player>.bar1>.hp_bar>.bar_username {
 		float: right;
 		text-align:right;
 		padding-right: 15px;
-		width: 384px;
+		width: 238px;
 		overflow: hidden;
 		white-space: nowrap;
-		font-size:40px;
+		font-size:35px;
 	}
 
 	#left > #bottom_bar > #weapon_icon {
@@ -659,27 +659,29 @@
 	#left>.player>.bar1>.hp_bar>.bar_weapon,
 	#left>.player>.bottom_bar>.equip_bar>.bar_weapon {
 		float: right;
-		width: 301px;
+		width: 238px;
 		height: 100%;
 	}
 
 	#right>.player>.bar1>.hp_bar>.bar_weapon,
 	#right>.player>.bottom_bar>.equip_bar>.bar_weapon {
 		float: left;
-		width: 301px;
+		width: 238px;
 		height: 100%;
 	}
 
 	#left>.player>.bottom_bar>.equip_bar {
-		width: 800px;
+		width: 600px;
 		height: 100%;
 		float: left;
+		margin-top:5px;
 	}
 
 	#right>.player>.bottom_bar>.equip_bar {
-		width: 800px;
+		width: 600px;
 		height: 100%;
 		float: right;
+		margin-top:5px;
 	}
 
 	.bottom_bar>.stat_t {
@@ -688,7 +690,7 @@
 
 	.bomb_defuse {
 		margin: auto;
-		width: 80px;
+		width: 60px;
 		height: 100%;
 	}
 	.bomb_timer{
@@ -744,7 +746,7 @@
 		max-height: 100%;
 	}
 	.hp_bar #weapon_icon img{
-		max-width: 233px;
+		max-width: 174.75px;
 		max-height: 100%;
 	}
 	.equip_bar>.moneys {
@@ -785,11 +787,11 @@
 		float: right;
 	}
 	#header {
-		width: 2600px;
-	    height: 250px;
+		width: 1950px;
+	    height: 187.5px;
 	    position: fixed;
 	    top: 0;
-	    left: 29%;
+	    left: 37%;
 	    margin-left: -525px;
 	}
 
@@ -804,7 +806,7 @@
 
 	#match_teams {
 		width: 100%;
-		height: 250px;
+		height: 187.5px;
 		background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0));
 	}
 	#team_name{
@@ -812,7 +814,7 @@
 	}
 
 	#time_counter {
-		font-size: 100px;
+		font-size: 75px;
 		font-weight: bold;
 		width: 10%;
 		height: 50%;
@@ -825,13 +827,13 @@
 	    height: 50%;
 	    margin: auto;
 	    color: #bec2c6;
-	    font-size: 60px;
+	    font-size: 45px;
 	    text-align: center;
 	}
 
 	.team_info {
 		width: 45%;
-		font-size:115px;
+		font-size:86.25px;
 		font-weight: bold;
 	}
 
@@ -926,7 +928,7 @@
 		width:35%;
 		text-align:right;
 		font-weight:600;
-		font-size:50px;
+		font-size:37.5px;
 		margin-left:-45px;
 	}
 	#match_two_info{
@@ -934,7 +936,7 @@
 		width:35%;
 		text-align:left;
 		font-weight:600;
-		font-size:50px;
+		font-size:37.5px;
 		margin-right:-45px;
 	}
 	#match_info{
@@ -942,18 +944,18 @@
 		width:30%;
 		text-align:center;
 		font-weight:500;
-		font-size:55px;
+		font-size:41.25px;
 	}
 	#who_won{
-		display:none;
-		position:absolute;
-		height:60px;
-		margin-left:-500px;
-		left:50%;
-		top:180px;
-		width:1000px;
+		display: none;
+		position: absolute;
+		height: 160px;
+		margin-left: -1029px;
+		left: 50%;
+		top: 1000px;
+		width: 2000px;
 		text-align: center;
-    	font-size: 40px;
+		font-size: 100px;
 		background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0))
 	}
 	#who_won div {
@@ -961,12 +963,12 @@
 	}
 
 	#kd_bar {
-		font-size:40px;
-		width:210px;
+		font-size:30px;
+		width:177px;
 	}
 
 	#kd_bar span{
-		margin-left:30px;
+		margin-left:10px;
 	}
 
 	#left #kd_bar {
@@ -978,8 +980,8 @@
 	}
 
 	.death_big {
-		width:100px;
-		margin-top:25px;
+		width:75px;
+		margin-top:18px;
 	}
 
 	#observed_player .t #observed_username{
@@ -991,11 +993,11 @@
 	}
 
 	#observed_player {
-		width: 1000px;
-		height: 350px;
+		width: 750px;
+		height: 262.5px;
 		position: fixed;
 		bottom: 200px;
-		left: 1420px;
+		left: 1570px;
 		background-color: rgba(0, 0, 0, 0.3);
 	}
 
@@ -1005,7 +1007,7 @@
 	}
 
 	#obs_left img{
-		margin:166px 30px 0 30px;
+		margin:80px 22.5px 0 22.5px;
 	}
 
 	#obs_right {
@@ -1019,19 +1021,23 @@
 
 	#observed_username{
 		width:100%;
-		margin-top:30px;
-		font-size:70px;
+		margin-top:22.5px;
+		font-size:52.5px;
 	}
 
 	#obstext {
 		float:left;
-		max-width:635px;
-		max-height:108px;
+		max-width:476.25px;
+		max-height:81px;
 		overflow:hidden;
 	}
 
 	#obsteamimg, #observed_bottombar .rk {
 		float:right;		
+	}
+
+	#obsteamimg{
+		margin-right:15px;
 	}
 
 	#observed_bottombar .rk {
@@ -1041,33 +1047,32 @@
 
 	#observed_name{
 		width:100%;
-		font-size:50px;
+		font-size:37.5px;
 	}
 	
 	#observed_country img{
-		margin-top:3px;
 		margin-right:3px;
 	}
 
 	#observed_bottombar {
 		padding-top:20px;
-		font-size:40px;
-		height:111px;
+		font-size:30px;
+		height:79px;
 		width:100%;
 		background: linear-gradient(to left, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0));
 	}
 	
-	#observed_bottombar .sk {
-		margin-right:30px;
+	#observed_bottombar .sk, #observed_bottombar .sa {
+		margin-right:20px;
 	}
 
 	#obs_death {
-		height:80px;
+		height:60px;
 		float:right;
 	}
 
 	#observed_health {
-		font-size:110px;
+		font-size:82px;
 		padding:5px 0 5px 30px;
 		position:fixed;
 		bottom:0px;
@@ -1081,7 +1086,9 @@
 	}
 
 	#observed_health img{
-		height:160px;
+		height: 90px;
+		margin-top: 20px;
+		margin-right: 15px;
 	}
 
 	#obs_hp > *, #obs_armor > *{
@@ -1089,8 +1096,8 @@
 	}
 
 	#obs_hp .bar, #obs_armor .bar {
-		margin-top:75px;
-		margin-left:30px;
+		margin-top: 54px;
+    	margin-left: 13px;
 		width:265px;
 		height:30px;
 		background-color:#333;
@@ -1110,7 +1117,7 @@
 		bottom:0;
 		right:0;
 		width:1000px;
-		height:160px;
+		height:120px;
 		background: linear-gradient(to left, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0));
 	}
 
@@ -1118,21 +1125,26 @@
 		float:right;
 	}
 
+	#observed_ammo > img {
+		height: 75px;
+		margin: 25px 25px auto 25px;
+	}
+
 	#observed_ammo .text .chamber {
-		font-size:110px;
+		font-size:82px;
 	}
 
 	#observed_ammo .text .mag {
-		font-size:60px;
+		font-size:45px;
 	}
 
 	#team_1_logo, #team_logo, #team_2_logo {
-		width:190px;
+		width:142.5px;
 	}
 
 	#eventslogo #logo_left {
 		position:fixed;
-		right:100px;
+		right:150px;
 		bottom:1320px;
 	}
 
@@ -1153,4 +1165,8 @@
 		margin-left:auto;
 		margin-right:auto;
 		display:block;
+	}
+
+	.win_img {
+		height:110px;
 	}
