--- a/public/huds/arie-hud1080/template.pug
+++ b/public/huds/arie-hud1080/template.pug
@@ -48,12 +48,19 @@ html
               img(src="/files/img/flags/indonesia.png")
           #observed_name 
             span NAME
+            #obs_nades
           #observed_border
           #observed_bottombar
             span.sk K 0 
             span.sa A 0
             span.sd D 0
             strong.sm
+      #observed_killfeed
+        img(src="/files/img/death.png")
+        img(src="/files/img/death.png")
+        img(src="/files/img/death.png")
+        img(src="/files/img/death.png")
+        img(src="/files/img/death.png")
       #left.team
         #player1.player
           .bar1
