removing sponsor images

--- a/public/huds/arie-hud1080/template.pug
+++ b/public/huds/arie-hud1080/template.pug
@@ -243,7 +243,7 @@ html
         #logo_left
           img(src="/files/img/IEG_Logo.png")
         #logo_bottom
-          img(src="/files/img/Logo_PKPI.png")
+          img(src="/files/img/sponsors/Logo_PKPI.png")
       #defuser
         #defuser_title
           | DEFUSE TIME
